// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for saleswings's submitScreenEvent destination action: all fields 1`] = `
Object {
  "anonymousID": "anonId1234",
  "data": "Home",
  "email": "itimo@zimul.ad",
  "kind": "Screen",
  "timestamp": "2022-12-18T13:46:53.652Z",
  "url": "]qLj6Vft5pTqg",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "userID": "user1234",
  "values": Object {
    "anonymousID": "]qLj6Vft5pTqg",
    "data": "]qLj6Vft5pTqg",
    "email": "itimo@zimul.ad",
    "kind": "]qLj6Vft5pTqg",
    "referrerUrl": "]qLj6Vft5pTqg",
    "timestamp": "2021-02-01T00:00:00.000Z",
    "url": "]qLj6Vft5pTqg",
    "userAgent": "]qLj6Vft5pTqg",
    "userID": "]qLj6Vft5pTqg",
    "values": Object {
      "testType": "]qLj6Vft5pTqg",
    },
  },
}
`;

exports[`Testing snapshot for saleswings's submitScreenEvent destination action: required fields 1`] = `
Object {
  "anonymousID": "anonId1234",
  "data": "Home",
  "kind": "Screen",
  "timestamp": "2022-12-18T13:46:53.632Z",
  "url": "https://segment.com/academy/",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "userID": "user1234",
  "values": Object {
    "data": "]qLj6Vft5pTqg",
    "kind": "]qLj6Vft5pTqg",
  },
}
`;
